format the response from gpt

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=GAIA
 spring.ai.openai.chat.options.model=gpt-3.5-turbo
 spring.ai.openai.chat.options.temperature=0.5
 springdoc.swagger-ui.path=/GAIA.html
+springdoc.swagger-ui.doc-expansion=none
+springdoc.swagger-ui.display-request-duration=true
